--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,13 @@
 @import "./colors.css";
 
 body {
+    width: 100vw;
+    height: 100vh;
     margin: 0;
     padding: 0;
     font-family: "NotoSansKR", sans-serif;
     font-weight: 400;
+    background-color: white;
     color: black;
 }
 
